Tests/Negative/EchoNothType.mr
fun foo() {}

fun main(): i32 {
    echo foo(); // Error: Cannot echo 'noth' type
    return 0;
}
